# Quant-Autoresearch

./: .gitignore  CLAUDE.md  README.md  agent_runner.py  analysis.html  analysis.ipynb  architecture.md  backtest_runner.py  cli.py  prepare_data.py  program.md  pyproject.toml  research_engine.py  strategy.py  strategy.py.bak
.github/workflows/: ci.yml  python-tests.yml
config/: quant-autoresearch.service  supervisord.conf
docs/: data-pipeline-v2.md  overfit-defense-v2.md  research-capabilities-v2.md  research-karpathy-autoresearch.md  research-tradingagents.md  upgrade-plan-v2.md
src/context/: composer.py
src/core/: backtester.py  engine.py  research.py  runner.py
src/data/: connector.py  preprocessor.py
src/memory/: playbook.py
src/models/: router.py
src/prompts/: git_rules.md  identity.md  quant_rules.md  safety_policy.md  tool_guidance.md
src/safety/: guard.py
src/strategies/: active_strategy.py
src/tools/: bm25_search.py  registry.py
src/utils/: iteration_tracker.py  logger.py  retries.py  telemetry.py
tests/: conftest.py
tests/integration/: test_engine_integration.py  test_integration.py  test_loop.py
tests/regression/: test_determinism.py
tests/security/: test_adversarial.py  test_safety_workflow.py
tests/unit/: test_backtester_v2.py  test_bm25_tool.py  test_compactor_acc.py  test_compactor_logic.py  test_composer_modular.py  test_data.py  test_engine_opendev.py  test_guard_opendev.py  test_playbook_memory.py  test_research.py  test_retry_logic.py  test_router_routing.py  test_runner.py  test_security.py  test_strategy_interface.py  (+3 more)
(+6 files in other folders)
